[build-system]
requires = ["setuptools>=61.0", 'numpy', 'pandas', 'scipy', 'scikit-learn', 'scikit-image', 'pyrosm', 'python-igraph']
build-backend = "setuptools.build_meta"

[project]
name = "georouter"
version = "0.1.1"
authors = [
  { name="David Saldubehere" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/davidsaldubehere/georouter"
